# AoC-2021

./: .gitignore
day1/: main.py
day10/: main.ts
day11/: main.py
day12/: main.ts
day13/: main.js
day14/: main.py
day15/: Cargo.toml
day15/src/: main.rs
day16/: main.py
day17/: main.py
day18/: main.py
day19/: main.py
day2/: main.py
day20/: part1.rb  part2.rb
day21/: main.py
day22/: main.py
day23/: main.py
day24/: main.py
day25/: Cargo.toml  main.rs
day3/: main.py  main2.py
day4/: Cargo.toml
day4/src/: main.rs
day5/: main.py
day6/: main.py
day7/: main.js
day8/: main.py  main1.py
day9/: main.py
