[package]
name = "day25"
version = "0.1.0"
authors = ["Rstar284 <supermanrehan284@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
ndarray = "0.15.4"

[[bin]]
name = "day25"
path = "main.rs"
